Downgrade js-logic-extractor target to Java 17
Java 21 virtual threads aren't available on 17, so this is more than
a version bump: per-file fan-out now uses a fixed-size thread pool
sized to job.maxConcurrency() per job, which is itself the concurrency
throttle, replacing the separate Semaphore. The shared extractionExecutor
bean now only kicks off whole jobs off the HTTP thread (bounded by
concurrent job count, not file count), so it's a plain cached pool.

Also drops the now-ineffective spring.threads.virtual.enabled flag and
moves Docker/Maven base images from temurin-21 to temurin-17.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PCqUsdEEU6g3j88eHfa4YH